--- a/Bus-Reservation-System/Building Bus Reservation System using Python and Django-DEEPIKA S(5113,KEC)/Screenshorts/Building Bus Reservation System using Python and Django-DEEPIKA S(5113,KEC) ppt/README
+++ b/Bus-Reservation-System/Building Bus Reservation System using Python and Django-DEEPIKA S(5113,KEC)/Screenshorts/Building Bus Reservation System using Python and Django-DEEPIKA S(5113,KEC) ppt/README
@@ -1,1 +1,18 @@
 
+PROJECT CREATED BY : DEEPIKA S
+
+LOGIN DETAILS:
+  
+  Uname: admin
+  
+  Password:admin
+
+#Project Running steps:
+  
+  python manage.py makemigrations
+  
+  python manage.py migrate
+  
+  python manage.py createsuperuser
+  
+  python manage.py runserver
